feat(bench): add manifest-driven planning, schema v2, and interop suite

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = []
 
 [project.scripts]
 delta-bench-compare = "delta_bench_compare.compare:main"
+delta-bench-interop-run = "delta_bench_interop.run_case:main"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
