--- a/crates/delta-bench/Cargo.toml
+++ b/crates/delta-bench/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { workspace = true }
 url = { workspace = true }
 tempfile = { workspace = true }
 sha2 = { workspace = true }
+serde_yaml = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
